Fixed the section-headers' vertical align and testing media query on screens of 1200px or less

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
 }
 
+
+/*  Allows scrolling to be smooth when clicking on nav links */
 html {
     scroll-behavior: smooth;
 }
@@ -9,7 +11,6 @@ html {
 body {
     font-family: monospace;
     color: rgba(0, 0, 0, 0.856);
-    /* width: 100%; */
 }
 
 header {
@@ -23,7 +24,6 @@ header {
 main {
     width: 87%;
     margin: auto;
-    
 }
 
 /* Styles the hyperlinks to the section back to regular color and removes the default underline */
@@ -91,7 +91,7 @@ td {
 }
 
 img {
-    height: 50vh;
+    height: 100%;
     width: 100%;
     border: 5px solid rgba(75, 133, 9, 0.39);
     opacity: 0.7;
@@ -107,7 +107,7 @@ img:hover {
     text-align: right;
     border-right: 5px solid rgb(75, 133, 9);
     padding-right: 2%;
-    vertical-align: text-top;
+    vertical-align: top;
     flex-wrap: wrap;
 }
 
@@ -171,12 +171,8 @@ img:hover {
     padding: 1% 2%;
 }
 
-/* @media screen and (max-width: 1200px) {
+@media screen and (max-width: 1200px) {
     body {
-        width: 100rem;
+        width: 80rem;
     }
-
-    nav ul {
-        flex-direction: column;
-    }
-  } */
+}
